style.css
/* ... */
#edge{
	pointer-events: none;
	position: absolute;
	top: -114px;
	left: -144px;
	transform: scale(0.02) translate(-13px,9px) rotate(3.21deg);
	z-index: 1;
}
#posel{
	position: absolute;
	top: 20px;
	left: 50%;
	transform: translateX(-50%);
	width: 155px;
	height: 24px;
	padding: 5px;
	line-height: 17px;
	background: white;
	border-radius: 100px;
	text-align: center;
	z-index: 5;
	font-family: mono;
}
#chat{
	position: absolute;
	bottom: 20px;
	right: 20px;
	width: 36px;
	height: 36px;
	padding: 8px;
	box-shadow: 0 3px 10px rgba(0,0,0,.3);
	border-radius: 18px;
	fill: currentcolor;
	line-height: 15px;
	background: white;
	border-radius: 100px;
	text-align: center;
	z-index: 5;
	cursor: pointer;
}

#place{
	position: absolute;
	bottom: 20px;
	left: 50%;
	transform: translateX(-50%);
	min-width: 155px;
	height: 24px;
	padding: 5px;
	line-height: 15px;
	background: white;
	border-radius: 100px;
	text-align: center;
	z-index: 5;
}
#modal {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	background: rgb(255, 255, 255);
	display: flex;
	flex-direction: column;
	color: rgb(0, 0, 0);
	border-radius: 8px;
	width: min(325px, calc(100% - 64px));
	padding: 24px;
	z-index: 7;
	box-sizing: content-box;
}

@media (max-width:500px){
	#modal {
		padding: 16px;
	}

	#modal-install {
		width: 100% !important;
	}

	#modal-footer {
		margin-top: 16px;
	}
}

#close-btn{
	width: 20px;
  height: 20px;
  font-size: 20px;
  cursor: pointer;
	display: inline-block;
	fill: currentcolor;
	vertical-align: middle;
	line-height: 1em;
}
#modal-header {
	display: flex;
	justify-content: space-between;
	align-items: center;
	margin-bottom: 24px;
}

#modal-content{
	font-family: reddit;
	font-size: 18px;
	line-height: 20px;
	margin: 0px 0px 20px;
}

#modal-install {
	height: 40px;
	background: white;
	align-self: center;
	width: 60%;
	border: 1px solid lightgray;
	border-radius: 40px;
	text-align: center;
	line-height: 40px;
	cursor: pointer;
	transition: .1s border;
}

#modal-install:hover {
	border: 2px solid #ff4500;
	line-height: 38px;
}

#modal-footer {
	margin-top: 16px;
	display: flex;
	justify-content: center;
	align-items: center;
	position: relative;
}

.modal-footer-button {
	display: block;
	width: 36px;
	height: 36px;
	padding: 8px;
	box-shadow: 0 3px 10px rgba(0,0,0,.3);
	border-radius: 18px;
	position: absolute;
	cursor: pointer;
}

mute-button {
	bottom: -2px;
	left: -6px;
}

place-chat-button {
	bottom: -2px;
	right: -6px;
	width: 72px !important
}

place-chat-button > img {
	position: absolute;
	left: 50%;
	transform: translateX(-50%);
	top: -30%;
}

#helpbtn, #closebtn{
	display: block;
	width: 36px;
	height: 36px;
	padding: 8px;
	box-shadow: 0 3px 10px rgba(0,0,0,.3);
	border-radius: 18px;
	position: absolute;
	top: 20px;
	right: 20px;
	cursor: pointer;
	background: white;
	fill: currentcolor;
	z-index: 5;
}
#closebtn{
	right: unset;
	left: 20px;
	text-align: center;
	font-size: 25px;
	line-height: 8px;
}

#palette {
	display: block;
	transition: transform .3s ease-out;
	background: white;
	box-shadow: 0 0 10px black;
	position: absolute;
	bottom: 0;
	left: 0;
	right: 0;
	z-index: 7;
}

#colours {
	padding: 14px 14px 0 14px;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}

#palette .buttons{
	display: flex;
	flex-direction: row;
	justify-content: center;
	gap: 16px;
	padding: 14px 16px 16px 16px;
}

.pcancel, .pok{
	width: 100px;
	height: 40px;
	border-radius: 50px;
	border: 1px #d4d7d9 solid;
	padding: 9px;
	text-align: center;
	cursor: pointer;
	min-width: 162px;
}
.pok{
	border: 4px #f1f1f1 solid;
	cursor: not-allowed;
	padding: 6px;
}
.pcancel svg, .pok svg{
	height: 100%;
}
.pok.enabled{
	border: 4px #ff5500 solid;
	cursor: pointer;
}

#colours div{
	height: 32px;
	flex-grow: 1;
	width: 24px;
	flex-shrink: 0;
	margin: 2px;
	cursor: pointer;
}

#colours div.sel{
	margin: 0;
	border: 2px white solid;
	box-shadow: rgb(0 0 0 / 50%) 0px 4px 10px;
	box-sizing: content-box;
}

/*Palette indicators*/
#colours span {
	background-color: rgba(255, 255, 255, 0.2);
	border-radius: 20px;
	width: 15px;
	height: 15px;
	position: absolute;
	text-align: center;
	line-height: 1;
	visibility: hidden;
}

@media (max-width: 1000px){
	#colours div{
		flex-basis: calc(100% / 16 - 4px);
	}
}
@media (max-width: 500px){
	#colours div{
		flex-basis: calc(100% / 8 - 4px);
	}
}
@media (max-width: 300px){
	#colours div{
		flex-basis: calc(100% / 4 - 4px);
	}
}

#helpbtn, #posel, #place, #archiveView, .toastMenu, #captchaPopup, #closebtn, #timelapsePanel {
	box-shadow: 0 0 30px black;
}

#onlineCounter {
	display: inline-block;
	color: white;
	line-height: 16px;
}

#playerIcon {
	display: inline-block;
	color: white;
	height: 80%;
}

#donate {
	cursor: pointer;
	box-shadow: 0 0 10px grey;
	padding: 5px;
	line-height: 15px;
	background: white;
	text-align: center;
}

@keyframes pulse {
	0% {transform: scale(1);}
	50% {transform: scale(1.05);}
	100% { transform: scale(1);}
}

#onlinepanel {
	background: rgba(0, 0, 0, 0.6);
	height: 25px;
	border-radius: 10px;
	padding: 3px;
	margin-top: 2.5px;
	margin-right: 15px;
	display: flex;
	gap: 3px;
}

#connproblems {
	text-align:center;
	transition: opacity .5s;
	position: absolute;
	opacity: 0;
	bottom: 80px;
	z-index: 22;
	font-family: 'mono';
}

#chatPanel {
	position: absolute;
	top: 20px;
	width: 330px;
	bottom: 20px;
	right: 20px;
	border-radius: 10px;
	background-color: white;
	z-index: 99;
	padding: 10px;
	transform: translateX(calc(100% + 20px));
	transition: transform .2s;
}

#chatPanel.open{
	transform: translateX(0);
	box-shadow: 0 0 30px black;
}

.channels-options {
	position: relative;
	height:30px;
	width: 150px;
	border-radius: 20px;
	box-shadow: 0 0 10px rgba(0,0,0,0.4);
	display: flex;
	flex-direction: row;
	margin-right: 15px;
	cursor: pointer;
}

.channels-options > span {
	flex: auto;
	line-height: 30px;
	text-align: center;
	border-radius: 20px 0px 0px 20px;
	background-color: transparent;
	white-space: nowrap;
}
/* ... */

